# uniffi-fs-repros

./: Cargo.toml  build.sh
src/: lib.rs  lib.udl
