[package]
name = "uniffi-rs-repros"
edition = "2021"
version = "0.1.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "repros"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
thiserror = "1.0"
uniffi = { version = "0.25.1", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.25.1", features = [ "build" ] }
